	  and do_copy_text(); changes to do_cut_text(), shortcut_init(),
	  and do_input(). (DLR, suggested by Ken Tyler)
	- Add the ability to indent and unindent all marked lines of
	  text, via Meta-} (Meta-]) and Meta-{ (Meta-[).  New functions
	  do_indent_marked(), do_indent_marked_void(), and
	  do_unindent_marked_void(); changes to shortcut_init(). (Chris
	  and DLR)
	- Change the shortcut to find the matching bracket to ^].
	  Changes to shortcut_init() and do_statusbar_input(). (DLR)
	- Add the ability to move to the first and last line of the help
	  text and the first and last file in the file browser via
	  Meta-\ (Meta-|) and Meta-/ (Meta-?).  Changes to do_browser(),
	  shortcut_init(), and do_help(). (DLR)
	- Allow unjustifying if we resize the window immediately after
	  justifying, as Pico does, and make input handling across
	  resizes more consistent.  Changes to handle_sigwinch(),
	  main(), get_kbinput(), parse_kbinput(), get_byte_kbinput(),
	  and get_unicode_kbinput(); removal of reset_kbinput(). (DLR)
- browser.c:
  do_browser()
	- Reference NANO_GOTODIR_(ALT|F)?KEY instead of
	  NANO_GOTOLINE_(ALT|F)?KEY for the "Go to Directory" shortcut.
	  (DLR)
  parse_browser_input()
	- Remove redundant key checks. (DLR)
  browser_refresh()
	- Rename variable editline to line, for consistency. (DLR)
	- Change variable i from an int to a size_t in order to match
	  selected, which it's compared against. (DLR)
- files.c:
  open_file()
	- Remove redundant wording in the error message when we try to
	  open a device file. (DLR)
  safe_tempfile()
	- Don't ignore $TMPDIR if it's set but blank, for consistency.
	  (DLR)
  write_file()
	- Don't free backupname before displaying it in a statusbar error
	  message. (DLR, found by Bill Marcum)
	- If we can't save the backup file for some reason, at least
	  save the original file, if possible, since that's better than
	  saving nothing. (DLR, problem found by Bill Marcum, solution
	  suggested by Jordi)